--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <!-- Sounds -->
 <audio id="popSound" src="pop.mp3"></audio>
-<audio id="valentineSong" src="valentine-song.mp3"></audio>
+<audio id="valentineSong" src="valentine-song.m4a"></audio>
 
 <script>
   const minion = document.getElementById("minion");
@@ -261,3 +261,4 @@
 </script>
 </body>
 </html>
+
