--- a/index.html
+++ b/index.html
@@ -70,19 +70,41 @@
   #yesBtn { background-color: #ff66b2; color: white; }
   #noBtn { background-color: #ccc; color: black; }
 
-  .confetti {
+  .heart {
     position: fixed;
-    width: 8px;
-    height: 8px;
-    top: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #ff4d88;
+    transform: rotate(-45deg);
+    top: -20px;
     pointer-events: none;
+    z-index: 50;
+    animation: fall linear forwards;
+  }
+
+  .heart::before,
+  .heart::after {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background-color: #ff4d88;
     border-radius: 50%;
-    animation: fall linear infinite;
+  }
+
+  .heart::before {
+    top: -6px;
+    left: 0;
+  }
+
+  .heart::after {
+    left: 6px;
+    top: 0;
   }
 
   @keyframes fall {
-    0% { transform: translateY(0) rotate(0deg); }
-    100% { transform: translateY(120vh) rotate(360deg); }
+    0% { transform: translateY(0) rotate(0deg); opacity:1; }
+    100% { transform: translateY(120vh) rotate(360deg); opacity:0; }
   }
 
   .shake { animation: shakeAnim 0.7s; }
@@ -160,105 +182,107 @@
 <audio id="valentineSong" src="valentine-song.m4a"></audio>
 
 <script>
-  const minion = document.getElementById("minion");
-  const noBtn = document.getElementById("noBtn");
-  const yesBtn = document.getElementById("yesBtn");
-  const message = document.getElementById("message");
-  const whyText = document.getElementById("whyText");
-  const popSound = document.getElementById("popSound");
-  const valentineSong = document.getElementById("valentineSong");
-  const explosionContainer = document.getElementById("explosionContainer");
-  const title = document.querySelector("h1");
-  const buttonsDiv = document.getElementById("buttons");
-  const imageContainer = document.getElementById("image-container");
+const minion = document.getElementById("minion");
+const noBtn = document.getElementById("noBtn");
+const yesBtn = document.getElementById("yesBtn");
+const message = document.getElementById("message");
+const whyText = document.getElementById("whyText");
+const popSound = document.getElementById("popSound");
+const valentineSong = document.getElementById("valentineSong");
+const explosionContainer = document.getElementById("explosionContainer");
+const title = document.querySelector("h1");
+const buttonsDiv = document.getElementById("buttons");
+const imageContainer = document.getElementById("image-container");
 
-  const reasons = [
-    "Why not? 🥺",
-    "Are you sure?? 💔",
-    "Im giving you my heart though 😭",
-    "This minion is SAD now",
-    "That was rude 😐",
-    "Try again pls 💕"
-  ];
+const reasons = [
+  "Why not? 🥺",
+  "Are you sure?? 💔",
+  "Im giving you my heart though 😭",
+  "This minion is SAD now",
+  "That was rude 😐",
+  "Try again pls 💕"
+];
 
-  let reasonIndex = 0;
-  let noBtnOffsetTop = 0;
-  const moveStep = 20;
+let reasonIndex = 0;
+let noBtnOffsetTop = 0;
+const moveStep = 20;
 
-  noBtn.addEventListener("click", () => {
-    const currentWidth = minion.offsetWidth;
-    const newWidth = currentWidth * 1.15;
-    minion.style.width = Math.min(newWidth, window.innerWidth * 0.8) + "px";
+noBtn.addEventListener("click", () => {
+  const currentWidth = minion.offsetWidth;
+  const newWidth = currentWidth * 1.15;
+  minion.style.width = Math.min(newWidth, window.innerWidth * 0.8) + "px";
 
-    noBtnOffsetTop += moveStep;
-    const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
-    if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
-    noBtn.style.transform = `translateY(${noBtnOffsetTop}px)`;
+  noBtnOffsetTop += moveStep;
+  const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
+  if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
+  noBtn.style.transform = `translateY(${noBtnOffsetTop}px)`;
 
-    whyText.textContent = reasons[reasonIndex % reasons.length];
-    reasonIndex++;
+  whyText.textContent = reasons[reasonIndex % reasons.length];
+  reasonIndex++;
 
-    popSound.currentTime = 0;
-    popSound.play();
-  });
+  popSound.currentTime = 0;
+  popSound.play();
+});
 
-  yesBtn.addEventListener("click", () => {
-    message.textContent = "YAY!! 💕🥰 My Valentine!";
-    whyText.textContent = "";
+yesBtn.addEventListener("click", () => {
+  message.textContent = "YAY!! 💕🥰 My Valentine!";
+  whyText.textContent = "";
 
+  document.body.classList.add('shake');
+  minion.classList.add('bounce');
+  launchHearts(300, 15);
+
+  valentineSong.currentTime = 0;
+  valentineSong.play();
+
+  setTimeout(() => {
+    document.body.classList.remove('shake');
+    minion.classList.remove('bounce');
+  }, 700);
+
+  // Stage 1: 3 seconds - clear minion/text/buttons and flood hearts
+  setTimeout(() => {
+    title.style.display = "none";
+    imageContainer.style.display = "none";
+    whyText.style.display = "none";
+    message.style.display = "none";
+    buttonsDiv.style.display = "none";
+
+    launchHearts(1000, 20); // massive hearts
+  }, 3000);
+
+  // Stage 2: 6 seconds - show your picture with explosion hearts
+  setTimeout(() => {
+    explosionContainer.style.display = "block";
     document.body.classList.add('shake');
-    minion.classList.add('bounce');
-    launchConfetti(300, 20);
 
-    valentineSong.currentTime = 0;
-    valentineSong.play();
+    launchHearts(300, 15); // extra hearts around picture
 
     setTimeout(() => {
       document.body.classList.remove('shake');
-      minion.classList.remove('bounce');
-    }, 700);
+    }, 1200);
+  }, 6000);
+});
 
-    // After 6s, hide everything else & explode your picture
-    setTimeout(() => {
-      title.style.display = "none";
-      imageContainer.style.display = "none";
-      whyText.style.display = "none";
-      message.style.display = "none";
-      buttonsDiv.style.display = "none";
-
-      explosionContainer.style.display = "block";
-      document.body.classList.add('shake');
-      launchConfetti(500, 25);
-
-      setTimeout(() => {
-        document.body.classList.remove('shake');
-      }, 1200);
-    }, 6000);
-  });
-
-  function launchConfetti(count = 120, maxSize = 8) {
-    for (let i = 0; i < count; i++) {
-      const confetti = document.createElement("div");
-      confetti.classList.add("confetti");
-      confetti.style.left = Math.random() * 100 + "vw";
-      confetti.style.width = Math.random() * maxSize + 5 + "px";
-      confetti.style.height = confetti.style.width;
-      confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-
-      const startY = Math.random() * window.innerHeight * -0.5;
-      confetti.style.transform = `translateY(${startY}px)`;
-      confetti.style.animationDuration = (Math.random() * 1 + 1.5) + "s";
-      document.body.appendChild(confetti);
-      setTimeout(() => confetti.remove(), 4000);
-    }
+function launchHearts(count = 120, maxSize = 12) {
+  for (let i = 0; i < count; i++) {
+    const heart = document.createElement("div");
+    heart.classList.add("heart");
+    const size = Math.random() * maxSize + 8;
+    heart.style.width = size + "px";
+    heart.style.height = size + "px";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (Math.random() * 1 + 1.2) + "s";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 4000);
   }
+}
 
-  window.addEventListener('resize', () => {
-    const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
-    if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
-    noBtn.style.transform = `translateY(${noBtnOffsetTop}px)`;
-  });
+window.addEventListener('resize', () => {
+  const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
+  if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
+  noBtn.style.transform = `translateY(${noBtnOffsetTop}px)`;
+});
 </script>
 </body>
 </html>
-
