--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ button {
 </div>
 
 <div id="explosionContainer">
-  <img id="usPic" src="your-picture.png" alt="Us">
+  <img id="usPic" src="your-picture.PNG" alt="Us">
 </div>
 
 <!-- Sounds -->
 <audio id="popSound" src="pop.mp3"></audio>
-<audio id="valentineSong" src="valentine-song.mp3"></audio>
+<audio id="valentineSong" src="valentine-song.m4a"></audio>
 
 <script>
 const minion = document.getElementById("minion");
